argocd/paperless/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: paperless
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gotenberg
  name: gotenberg
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: gotenberg
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tika
  name: tika
spec:
  ports:
    - name: http
      port: 9998
      targetPort: 9998
  selector:
    app: tika
