argocd/paperless/manifests/gpt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gpt
  name: gpt
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gpt
  template:
    metadata:
      labels:
        app: gpt
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      securityContext:
        fsGroup: 10001
      containers:
        - image: harbor.yanello.net/docker/icereed/paperless-gpt:v0.29.0@sha256:4127ea223e0f496c1075a3a05661df4847140974c3c3ce89a4ba991be50320cb
          imagePullPolicy: IfNotPresent
          name: gpt
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              memory: 500Mi
          volumeMounts:
            - name: gpt-prompts
              mountPath: /app/prompts
            - name: gpt-app-config
              mountPath: /app/config
      volumes:
        - name: gpt-prompts
          persistentVolumeClaim:
            claimName: gpt-prompts
        - name: gpt-app-config
          persistentVolumeClaim:
            claimName: gpt-app-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gpt
  name: gpt
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: gpt
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: gpt-app
  name: gpt-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
      namespace: cilium
      sectionName: https
  hostnames:
    - paperless-gpt.yanello.net
  rules:
    - backendRefs:
        - name: gpt
          namespace: paperless
          group: ""
          kind: Service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
