argocd/paperless/manifests/kreuzakt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kreuzakt
  name: kreuzakt
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kreuzakt
  template:
    metadata:
      labels:
        app: kreuzakt
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: harbor.yanello.net/ghcr/anaisbetts/kreuzakt:v1.0.0@sha256:4a0109d03d663338fd967662aa0151ec7684d2ba31cdfd12f1bf4f3901b1cd8d
          imagePullPolicy: IfNotPresent
          name: kreuzakt
          resources:
            requests:
              cpu: 50m
              memory: 1280Mi
            limits:
              memory: 1664Mi
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /ingest
              name: ingest
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kreuzakt-data
        - name: ingest
          persistentVolumeClaim:
            claimName: kreuzakt-ingest
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kreuzakt
  name: kreuzakt
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: kreuzakt
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: kreuzakt-app
  name: kreuzakt-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
      namespace: cilium
      sectionName: https
  hostnames:
    - kreuzakt.yanello.net
  rules:
    - backendRefs:
        - name: kreuzakt
          namespace: paperless
          group: ""
          kind: Service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
