argocd/paperless/manifests/paperless.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: paperless
      annotations:
        backup.velero.io/backup-volumes: "paperless-export,paperless-media,paperless-data,paperless-consume"
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - image: harbor.yanello.net/ghcr/paperless-ngx/paperless-ngx:3.2.1@sha256:5fa76604a81df6945086e0837b14b56543d137e8ce4f311cc5d9ebe907e74e79
          imagePullPolicy: IfNotPresent
          name: paperless
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
            - name: paperless-media
              mountPath: /usr/src/paperless/media
          #   - name: paperless-consume
          #     mountPath: /usr/src/paperless/consume
          resources:
            requests:
              cpu: 10m
              memory: 1Gi
            limits:
              memory: 5Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 30
            timeoutSeconds: 10
        # - name: protonmail-bridge
        #   image: harbor.yanello.net/ghcr/dancwilliams/protonmail-bridge-docker:v3.25.0@sha256:2f804b70bbb5693254dfc9e2f5f0bc3570734f5b841c6b374686a3db82b1ea9d
        #   volumeMounts:
        #     - mountPath: "/root"
        #       name: protonmail-data
      restartPolicy: Always
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: protonmail-data
          persistentVolumeClaim:
            claimName: protonmail-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - image: harbor.yanello.net/docker/library/redis:8.10.2-alpine@sha256:718f745deb7dfefeac6eed7041fc7ec9476b50e61b247932682457c41adafa0e
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotenberg
  name: gotenberg
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: gotenberg
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - image: harbor.yanello.net/docker/gotenberg/gotenberg:8.37.0@sha256:f29984bd1e226bf1b93ba90af06000afa8b315853e99d27b9aaa41b93f15c769
          imagePullPolicy: IfNotPresent
          name: gotenberg
          command:
            - "gotenberg"
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 1Gi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tika
  name: tika
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: tika
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: tika
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - image: harbor.yanello.net/docker/apache/tika:3.3.1.0@sha256:90b7fa1dc018434075fce9e1d9b88b1e3d0ea6979d0cf86e116c79a8073ae973
          imagePullPolicy: IfNotPresent
          name: tika
          ports:
            - containerPort: 9998
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /tika
              port: 9998
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /tika
              port: 9998
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 448Mi
            limits:
              memory: 640Mi
      restartPolicy: Always
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: paperless-app
  name: paperless-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
      kind: Gateway
      group: gateway.networking.k8s.io
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - paperless.yanello.net
  rules:
    - backendRefs:
        - name: paperless
          namespace: paperless
          group: ""
          kind: Service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
